<resources>
    <string name="app_name">CareGiver</string>

    <string name="signup_header1">Create Account</string>
    <string name="signup_header2">Join CareGiver</string>
    <string name="signup_header3">Fill the details &amp; create your account</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="email">Email Address</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="label_continue">Continue</string>

    <string name="login_as_user">Login As User</string>
    <string name="login_as_admin">Login As Admin</string>

    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account?</string>

    <string name="other_detail">Other Details</string>
    <string name="hourly_charges">Hourly Charges</string>
    <string name="about_self">About Self</string>
    <string name="address">Address</string>
    <string name="landmark">Landmark</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="state">State/Provience</string>
    <string name="country">Country</string>
    <string name="pincode">Pincode</string>
    <string name="qualification">Qualification</string>
    <string name="experience">Experience</string>

    <string name="empty_fname">Enter first name</string>
    <string name="empty_lname">Enter last name</string>
    <string name="empty_phone">Enter phone number</string>
    <string name="empty_email">Enter email address</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="empty_password">Enter password</string>
    <string name="invalid_cPassword">Password and Confirm password should be same</string>

    <string name="empty_about">Tell me something about your self</string>
    <string name="empty_charges">Enter your charges</string>
    <string name="empty_experience">Enter your experience</string>
    <string name="empty_qualification">Enter your qualification</string>
    <string name="empty_address">Enter address</string>
    <string name="empty_landmark">Enter landmark</string>
    <string name="empty_street">Enter street</string>
    <string name="empty_city">Enter city</string>
    <string name="empty_state">Enter state or province</string>
    <string name="empty_country">Enter country</string>
    <string name="empty_pincode">Enter pincode</string>

    <string name="admin">Admin</string>

    <string name="select_user_type">Select User Type</string>
    <string name="all_user">All</string>
    <string name="parents">Parents</string>
    <string name="nurse">Nurse</string>
    <string name="nanny">Nanny</string>
    <string name="search_hint">Search Nanny/Nurse</string>

    <string name="forgot_password">Forgot Password</string>
    <string name="email_not_exist">No user exist with this email address</string>
    <string name="pass_sent">Password has been sent to </string>

    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>

    <string name="user_not_exist">Invalid user name or password</string>

    <string name="empty_user_type">Select User Type</string>
    <string name="email_exist">Email address already exist</string>
    <string name="phone_exist">Phone number already exist</string>

    <string name="edit">Edit</string>
    <string name="other_information">Other Information</string>

    <string name="book">Book</string>
    <string name="booking_request">Booking Request</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="from_date">From</string>
    <string name="to_date">To</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>

    <string name="error_from_date">From date should be before To date </string>
    <string name="error_to_date">To date can\'t be before From date </string>
    <string name="empty_from_date">Enter from date</string>
    <string name="empty_to_date">Enter To date</string>
    <string name="empty_to_time">Enter To time</string>
    <string name="empty_from_time">Enter From time</string>

    <string name="update">Update</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="booking_req_sent">Booking request sent successfully</string>

    <string name="search">Search</string>

    <string name="delete">Delete</string>
    <string name="warning_title">Warning</string>
    <string name="warning_msg">This User will be permanently deleted. Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="user_deleted">User has been deleted successfully</string>
    <string name="empty_booking">Currently you have No booking</string>
    <string name="message">Message</string>

    <string name="review">Review</string>
    <string name="comment">Comment</string>

    <string name="booking">Booking</string>
    <string name="timing">Timing</string>
    <string name="accept">Accept</string>
    <string name="end_contract">End Contract</string>
    <string name="feedback">Feedback</string>

    <string name="reviews">Reviews</string>

    <string name="email1">Email</string>
    <string name="reject">Reject</string>
    <string name="booking_request_on">Booking request on: </string>
    <string name="pending">Pending</string>
    <string name="canceled">Canceled</string>
    <string name="completed">Completed</string>
    <string name="on_going">On going</string>
    <string name="rejected">Rejected</string>

    <string name="empty_comment">Enter comment</string>
    <string name="feedback_submit">Feeback submitted successfully</string>

    <string name="book_now">Book Now</string>
    <string name="change_password">Change Password</string>

    <string name="refresh">Refresh</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>

    <string name="empty_review">No review found</string>

    <string name="invalid_pass">Invalid password</string>

    <string name="error_from_date2">Not available</string>
    <string name="error_to_date2">Not available</string>
</resources>